--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body{
     font-family: 'Alata', sans-serif;
 }
 
+a{
+    text-decoration: none;
+}
+
 ul{
     list-style: none;
 }
@@ -25,6 +29,7 @@ ul{
 .header-nav img{
     cursor: pointer;
     z-index: 2;
+    max-width: 200px;
     animation: animacao .7s ;
 }
 
@@ -217,6 +222,7 @@ ul{
     position: absolute;
     bottom: 0;
     margin-left: 10px;
+    max-width: 17%;
 }
 
 /* IMAGENS */  
@@ -249,58 +255,73 @@ ul{
 
 /* footer */
 
+
+
+
+.copy{
+    color:hsl(0, 0%, 41%);
+}
+
+
+
 .footer-content{
-    background: black;
-    display: flex;
-    justify-content: space-between;
-    color: white;
-    padding-top: 40px;
     margin-top: 50px;
+    background: black;
+    padding-top: 30px 0 20px;
 }
 .footer-1{
+    padding-top: 20px;
     display: flex;
     justify-content: space-between;
-}
-.footer-2{
-   display: flex;
-   justify-content: space-between;
-   gap: 50px;
-}
-.footer-2 ul{
-   display: flex; 
-    gap: 10px;
-   padding:0 0 20px 0;
-   position: relative;
-}
-.footer-2 a{
-    color: white;
-    text-decoration: none;
- }
-
- .footer-2 a:hover{
-     color: rgba(255, 255, 255, 0.7);
- }
-
-.footer-2 a:hover::after{
-    content: '';
-    position: absolute;
-    display: flex;
-    bottom: 10px;
-    margin: 0 6px;
-    width: 30px;
-    height: 3px;
-    border-radius: 50px;
-    background-color: rgba(255, 255, 255, 0.7);
-    margin-left: 20px;   
 }
 .icons{
     display: flex;
     gap: 20px;
     max-height: 25px;
+    cursor: pointer;
 }
-.copy{
-    color:hsl(0, 0%, 41%);
+
+.footer-2{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 0 40px;
+    margin-top: 50px;
 }
+.footer-2 ul{
+    display: flex;
+    gap: 20px;
+    padding: 0;
+    max-width: 30%;
+
+}
+.footer-2 a{
+    color: white;
+    position: relative;
+    transition: .3s;
+}
+.footer-2 a:hover{
+    color: rgba(255, 255, 255, 0.6);
+}
+.footer-2 a:hover::after{
+    content: '';
+    position: absolute;
+    bottom: -10px;
+    right: 50%;
+    left: 30%;
+    display: block;
+    width: 25px;
+    height: 3px;
+    background: rgba(255, 255, 255, 0.6);
+}
+
+.icons-responsivo{
+    display: none;
+}
+
+
+
+
+
 
 .attribution{
     padding:15px;
@@ -309,8 +330,6 @@ ul{
 .attribution a{
     font-size: 20px;
 }
-
-/* EFEITOS JAVASCRIPT */
 
 .scroll-js{
     opacity: 0;
@@ -351,6 +370,9 @@ ul{
     .section-item p{
         text-align: center;
     }
+
+
+
 
 }
 
@@ -394,6 +416,7 @@ ul{
         margin-top: 20px;
         min-width: 270px;
         min-height: 55px;
+        margin-left: 40px;
     }
     #nav.active #menu{
         z-index: 1;
@@ -452,7 +475,160 @@ ul{
     }
 
 
+
+    /* SESSAO 1 RESPONSIVA */
+    .container{
+        width: 100%;
+    }
+
+    .section-item H2{
+        font-size: 2.8rem;
+    }
+    .section-item p{
+        font-size: 1.5rem;
+        max-width: 100%;
+    }
+
+    /* SESSAO 2 RESPONSIVA */
+
+    .section-content-2 H2{
+        font-size: 3rem;
+    }
+
+    .section-content-2 p a{
+        display: none;
+    }
+    .section-content-2 {
+        justify-content: center;
+    }
+
+
+
+
+/* GALERIA */
+
+
+    .img-section-1{
+        flex-direction: column;
+        align-items: center;
+    }
+    .img-section-1 div{
+        width: 90%;
+        height: 20vh;
+    }
+
+    .img-section-2{
+        flex-direction: column;
+        align-items: center;
+    }
+    .img-section-2 div{
+        width: 90%;
+        height: 20vh;
+        position: relative;
+    }
+
+    .img-section-1 div:hover::before{
+        content:'';
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 20vh;
+        background: rgba(255, 255, 255, 0.7); 
+    }
+    .img-section-2 div:hover::before{
+        content:'';
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 20vh;
+        background: rgba(255, 255, 255, 0.7); 
+    }
+
+    .img-section-2 p{
+        text-transform: uppercase;
+        font-size: 20px;
+        position: absolute;
+        bottom: 0;
+        margin-left: 10px;
+    }
+
+
+    .img-item1{
+        background: url(images/mobile/image-deep-earth.jpg);
+    }
+
+    .img-item2{
+        background: url(images/mobile/image-night-arcade.jpg);
+    }
+    .img-item3{
+        background: url(images/mobile/image-soccer-team.jpg);
+    }
+    .img-item4{
+        background: url(images/mobile/image-grid.jpg);
+    }
+    .img-item5{
+        background: url(images/mobile/image-from-above.jpg);
+    }
+    .img-item6{
+        background: url(images/mobile/image-pocket-borealis.jpg);
+    }
+    .img-item7{
+        background: url(images/mobile/image-curiosity.jpg);
+    }
+    .img-item8{
+        background: url(images/mobile/image-fisheye.jpg);
+    }
+
+/* FOOTER RESPONSIVO */
+    .footer-content{
+        padding-top: 20px;
+    }
+    .footer-1 img{
+        margin: 20px auto;
+        width: 50%;
+    }
+    .icons{
+        display: none;
+    }
+
+
+    .footer-2{
+        gap: 20px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer-2 ul{
+        gap: 40px;
+        flex-direction: column;
+        margin-bottom: 60px;
+    }
+    .footer-2 ul a{
+        font-size: 1.4rem;
+    }
+    .icons-responsivo{
+        display: flex;
+        gap: 20px;
+    }
+    .icons-responsivo img{
+        width: 40px;
+    }
+
+    .copy{
+        font-size: 1.3rem;
+    }
 }
+
+
+@media (max-width:450px){
+
+
+    .header-nav img{
+        max-height: 1vh;
+    }
+}
+
 
 
 
