--- a/style.css
+++ b/style.css
@@ -626,7 +626,9 @@ ul{
 
 
     .header-nav img{
+        margin-top: 35px;
         max-width: 30%;
+        max-height: 20px;
     }
 
     .title-box{
