--- a/style.css
+++ b/style.css
@@ -414,9 +414,9 @@ ul{
 
     }
     .header-nav img{
-        margin-top: 20px;
-        min-height: 40px;
-        width: 30%;
+        margin-top: 30px;
+        height:50px;
+        width: 35%;
         margin-left: 40px;
     }
     #nav.active #menu{
@@ -444,12 +444,12 @@ ul{
         margin-right: 10px;
         cursor: pointer;
         padding:  4px  4px 30px;
-        margin-top: 30px;
+        margin-top: 35px;
 
     }
 
     #nav.active #btn{
-           margin: 30px 88.2%;  
+           margin-left: auto;
     }
     #hamburguer{
         display: block;
@@ -482,12 +482,17 @@ ul{
         width: 100%;
     }
 
+    .section-item{
+       width: 90%;
+    }
     .section-item H2{
-        font-size: 2.8rem;
+        font-size: 2.5rem;
+        text-align: center;
+        max-width: 100%;
     }
     .section-item p{
         font-size: 1.5rem;
-        max-width: 100%;
+        max-width:90%;
     }
 
     /* SESSAO 2 RESPONSIVA */
@@ -642,15 +647,17 @@ ul{
     /* sessao 1 */
     .section-item h2{
         font-size: 1.8rem;
+        text-align: center;
+        max-width: 90%;
     }
     .section-content{
         z-index: 0;
     }
 
     .section-content-2 h2{
-        max-width: 70%;
+        max-width: 90%;
         font-size: 1.8rem;
-
+        text-align: center;
     }
 
 }
